# agent

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXPLORATIONS.md  Makefile  README.md  TODO  main.py  main_aisuite.py  main_guidance.py  main_langchain.py  main_openai.py  requirements.txt  run.sh
examples/: assistant-functions.py
old/: main_aisuite.py  main_guidance.py  main_openai.py
scripts/: extract_prices.py  update_pricing.sh
src/: agent_runner.py  agents_memory.py  cancel.py  claude_memory.py  cli.rs  commands.py  constants.py  lib.rs  markdown_render.py  model_context.py  model_context_cache.py  model_registry.py  models.py  normalize_messages.py  pricing.rs  provider_registry.py  resume_tool_history.py  session_store.py  tool_status_display.py  tools.py  tools.py.bak  util.py
static/: pricing.py
tests/: browser_smoke.rs  conftest.py  display_contract.rs  first_milestone.rs  pricing_contract.rs  provider_contract.rs  session_contract.rs  test_agent_runner.py  test_agent_runner_newlines.py  test_agents_memory.py  test_apply_diff.py  test_claude_memory.py  test_fetch.py  test_help_command.py  test_main_clear_command.py  test_main_models_command.py  test_main_resume_replay_ignores_tool_calls.py  test_main_session_resume.py  test_meta_resume_clear.py  test_model_registry.py  test_models_completion.py  test_patch_file.py  test_prompt_meta_line.py  test_read_file_rendering.py  test_responses_tool_call_content_blocks_do_not_crash_trimming.py  test_resume_reconstructs_tool_panels.py  test_resume_tool_history.py  test_run_shell_command_timeout.py  test_tools.py  (+8 more)
(+45 files in other folders)
